// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HtmlWrapper /> with h2 and paragraphs 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6,
.c0 p:not(:last-child),
.c0 ul:not(:last-child),
.c0 ol:not(:last-child) {
  margin-bottom: 20px;
}

.c0 li {
  margin-bottom: 5px;
}

.c0 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink;
  text-decoration-skip: ink;
  font-weight: 400;
  color: #242529;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "
<h2>Here's the h2 heading</h2>
<p>
  Lorem ipsum dolor sit amet, ceteros volutpat incorrupte usu no, ei duo
  tamquam eligendi, vix admodum ceteros epicurei no. Vim et dicam prodesset,
  eu usu quas ponderum. Posse admodum vel in, quodsi voluptua vis an. Vim ad
  maiestatis honestatis.
</p>
<p>
  Ex erat hendrerit concludaturque eam, cum oporteat dignissim persecuti te,
  mei ea duis tempor imperdiet. Enim persius luptatum ea mel, te aeque
  interesset mea. Ex pertinacia inciderint scribentur per. Veri postea
  nostrum has no, vim veri scaevola signiferumque eu, maiorum hendrerit ei
  vel. Verear propriae ex eos, eu sea probo equidem. Eam dicunt numquam
  liberavisse ad, ut iuvaret erroribus vituperata vel.
</p>
<p>
  Meis placerat perfecto te cum. Brute solet ius no, altera tamquam
  dissentiunt pro ad. At dicta putent causae per. At est amet case, qui
  dictas partiendo aliquando ut.
</p>",
    }
  }
/>
`;

exports[`<HtmlWrapper /> with initial props 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6,
.c0 p:not(:last-child),
.c0 ul:not(:last-child),
.c0 ol:not(:last-child) {
  margin-bottom: 20px;
}

.c0 li {
  margin-bottom: 5px;
}

.c0 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink;
  text-decoration-skip: ink;
  font-weight: 400;
  color: #242529;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>This is just a single paragraph of text</p>",
    }
  }
/>
`;

exports[`<HtmlWrapper /> with varied content 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6,
.c0 p:not(:last-child),
.c0 ul:not(:last-child),
.c0 ol:not(:last-child) {
  margin-bottom: 20px;
}

.c0 li {
  margin-bottom: 5px;
}

.c0 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink;
  text-decoration-skip: ink;
  font-weight: 400;
  color: #242529;
}

<span
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>Here's the h1 heading</h1>
<p>
  Lorem ipsum dolor sit amet, ceteros volutpat incorrupte usu no, ei duo
  tamquam eligendi, vix admodum ceteros epicurei no. Vim et dicam prodesset,
  eu usu quas ponderum. Posse admodum vel in, quodsi voluptua vis an. Vim ad
  maiestatis honestatis.
</p>
<p>
  Ex erat hendrerit concludaturque eam, cum oporteat dignissim persecuti te,
  mei ea duis tempor imperdiet. Enim persius luptatum ea mel, te aeque
  interesset mea. Ex pertinacia inciderint scribentur per. Veri postea
  nostrum has no, vim veri scaevola signiferumque eu, maiorum hendrerit ei
  vel. Verear propriae ex eos, eu sea probo equidem. Eam dicunt numquam
  liberavisse ad, ut iuvaret erroribus vituperata vel.
</p>
<ul>
  <li>One <a href=\\"#\\">example link</a></li>
  <li>Two <a href=\\"#\\">example link</a></li>
  <li>Three <a href=\\"#\\">example link</a></li>
</ul>
<p>
  Meis placerat perfecto te cum. Brute solet ius no, altera tamquam
  dissentiunt pro ad. At dicta putent causae per. At est amet case, qui
  dictas partiendo aliquando ut.
</p>
<ol>
  <li>One <a href=\\"#\\">example link</a></li>
  <li>Two <a href=\\"#\\">example link</a></li>
  <li>Three <a href=\\"#\\">example link</a></li>
</ol>
<p>Fin.</p>",
    }
  }
/>
`;
